Fixed "add new bug" box layout
Some UI elements (es. "create" button) were not visible because layout did not adapt to viewport size.

--- a/taiga-inps-theme/custom.scss
+++ b/taiga-inps-theme/custom.scss
@@ -1496,3 +1496,8 @@ tg-wysiwyg {
         }
     }
 }
+
+.lightbox-create-edit {
+    position: absolute;
+    top: -48px;
+}
